[package]
name = "solfunmeme-dioxus"
version = "1.1.0"
authors = ["github-actions[bot] <github-actions[bot]@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.2", features = ["router"] }

#wallet-adapter = "1.1.2"
wallet-adapter = { git = "https://github.com/meta-introspector/SolanaWalletAdapter-zos", branch ="master" }

solana-sdk = "2.1.2"
bincode = "1.3.3"
jzon = "0.12.5"
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive"] }
gloo-timers = "0.3.0"
solana-transaction-error = { version = "2.1.13", features = ["serde"] }
qrcodegen = "1.8.0"
percent-encoding = "2.3.1"
fastrand = "2.3.0"


[features]
default = ["web"]
web = ["dioxus/web"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
