[package]
name = "solfunmeme-dioxus"
version = "1.1.0"
authors = ["github-actions[bot] <github-actions[bot]@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#wallet-adapter = "1.1.2"
#wallet-adapter = { git = "https://github.com/meta-introspector/SolanaWalletAdapter-zos", branch ="master" }

syn-serde = { git = "https://github.com/meta-introspector/syn-serde-rust", features = ["json"] }

bincode = "1.3.3"
dioxus = { version = "0.6.2", features = ["router"] }
fastrand = "2.3.0"
gloo = "0.11.0"
gloo-timers = "0.3.0"
gloo-storage = "0.3.0"
js-sys = "0.3.69"
jzon = "0.12.5"
log = "0.4.21"
thiserror = { version = "2.0.12" }
markdown-meta-parser = "0.1.3"
percent-encoding = "2.3.1"
pulldown-cmark = "0.13.0"
qrcodegen = "1.8.0"
reqwasm = "0.5.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
solana-sdk = "2.1.2"
solana-transaction-error = { version = "2.1.13", features = ["serde"] }
wallet-adapter = { git = "https://github.com/meta-introspector/SolanaWalletAdapter-zos", branch ="no-template" }
wasm-logger = "0.2.0"
wasm-bindgen = { version = "0.2.92", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.58", features = ["Storage"] }
url = "2.5.4"
sha2 = "0.10.9"
aes-gcm = "0.10.3"
base64 = "0.22.1"
bs58 = "0.5.1"
chacha20poly1305 = "0.10.1"

#uuid = "1.17.0"
nalgebra = "0.33.2"
chrono = "0.4.41"
# backend only sqlx = { version="0.8.3", features = [ "sqlite", "runtime-tokio", "tls-native-tls" ], optional = true}

[dependencies.x25519-dalek  ]
version = "2.0.1"
features = [ "static_secrets"]

[dependencies.uuid]
version = "1.17.0"
# Lets you generate random UUIDs
features = [
    "v4",
]

[features]
default = ["web"]
web = ["dioxus/web"]


[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
